RAG, DB and frontend setup

--- a/test_notebooks/rag_test.ipynb
+++ b/test_notebooks/rag_test.ipynb
@@ -92,8 +92,57 @@
    "execution_count": null,
    "id": "ddff1c99",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '__file__' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m sys.path.append(os.path.dirname(os.path.dirname(os.path.abspath(\u001b[34;43m__file__\u001b[39;49m))))\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msqlalchemy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m text\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdatabase\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msetup_db\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SessionLocal\n",
+      "\u001b[31mNameError\u001b[39m: name '__file__' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# generate_eval_queries.py - Updated\n",
+    "def generate_queries_from_db():\n",
+    "    db = SessionLocal()\n",
+    "    try:\n",
+    "        result = db.execute(text(\"\"\"\n",
+    "            SELECT \n",
+    "                i.id as invoice_id,\n",
+    "                i.order_id,\n",
+    "                i.contact_name,\n",
+    "                i.total_price,\n",
+    "                i.city,\n",
+    "                i.country,\n",
+    "                li.product_name,\n",
+    "                li.quantity,\n",
+    "                ROW_NUMBER() OVER (PARTITION BY i.id ORDER BY li.id) - 1 as item_index\n",
+    "            FROM invoices i\n",
+    "            LEFT JOIN line_items li ON i.id = li.invoice_id\n",
+    "            ORDER BY i.id, li.id\n",
+    "        \"\"\"))\n",
+    "        \n",
+    "        # Generate queries using invoice_id (database ID) for relevant_ids\n",
+    "        queries = []\n",
+    "        \n",
+    "        for row in rows[:10]:  # First 10 rows\n",
+    "            queries.extend([\n",
+    "                {\n",
+    "                    \"query\": f\"Show me the invoice with Order ID {row.order_id}\",\n",
+    "                    \"relevant_ids\": [f\"invoice_{row.invoice_id}\"]\n",
+    "                },\n",
+    "                {\n",
+    "                    \"query\": f\"Find the line item for {row.product_name}\",\n",
+    "                    \"relevant_ids\": [f\"item_{row.invoice_id}_{row.item_index}\"]\n",
+    "                }\n",
+    "            ])\n",
+    "        \n",
+    "        return queries\n"
+   ]
   }
  ],
  "metadata": {
